// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableInlineList renders all onExpandToggle 1`] = `
<div>
  <InlineList
    extractKey={[Function]}
    items={
      Immutable.List [
        1,
        2,
        3,
        4,
        5,
      ]
    }
    label={null}
    renderItem={[Function]}
    separateItems={true}
    separateItemsClassName="separate-items-with-comma"
    suffix={null}
    wrapperClassName={null}
  />
  <SecondaryButton
    onClick={[Function]}
  >
    Hide
  </SecondaryButton>
</div>
`;

exports[`ExpandableInlineList renders only 10 by default with expand toggle 1`] = `
<div>
  <InlineList
    extractKey={[Function]}
    items={
      Immutable.List [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
      ]
    }
    label={null}
    renderItem={[Function]}
    separateItems={true}
    separateItemsClassName="separate-items-with-comma"
    suffix={null}
    wrapperClassName={null}
  />
  <SecondaryButton
    onClick={[Function]}
  >
    Show all (11)
  </SecondaryButton>
</div>
`;

exports[`ExpandableInlineList renders only limited amount with expand toggle 1`] = `
<div>
  <InlineList
    extractKey={[Function]}
    items={
      Immutable.List [
        1,
        2,
        3,
      ]
    }
    label={null}
    renderItem={[Function]}
    separateItems={true}
    separateItemsClassName="separate-items-with-comma"
    suffix={null}
    wrapperClassName={null}
  />
  <SecondaryButton
    onClick={[Function]}
  >
    Show all (5)
  </SecondaryButton>
</div>
`;
